# serializer version: 1
# name: test_update[update.test-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.test',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 5>,
    'translation_key': 'vehicle_state_software_update_status',
    'unique_id': 'LRW3F7EK4NC700000-vehicle_state_software_update_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_update[update.test-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2026.0.0',
      'latest_version': '2024.12.0.0',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
      'update_status': 'available',
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_update_alt[update.test-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.test',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'teslemetry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 4>,
    'translation_key': 'vehicle_state_software_update_status',
    'unique_id': 'LRW3F7EK4NC700000-vehicle_state_software_update_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_alt[update.test-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2024.44.25',
      'latest_version': '2024.44.25',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 4>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_update_streaming[downloading]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2025.1.1',
      'latest_version': '2025.2.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 4>,
      'title': None,
      'update_percentage': None,
      'update_status': 'downloading',
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_streaming[installing]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2025.1.1',
      'latest_version': '2025.2.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
      'update_status': 'installing',
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_streaming[ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2025.1.1',
      'latest_version': '2025.2.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 5>,
      'title': None,
      'update_percentage': None,
      'update_status': 'available',
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_streaming[restored]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2025.2.1',
      'latest_version': '2025.1.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 4>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_update_streaming[updated]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'auto_update': False,
      'display_precision': 0,
      'entity_picture': 'https://brands.home-assistant.io/_/teslemetry/icon.png',
      'friendly_name': 'Test',
      'in_progress': False,
      'installed_version': '2025.2.1',
      'latest_version': '2025.1.1',
      'release_summary': None,
      'release_url': None,
      'skipped_version': None,
      'supported_features': <UpdateEntityFeature: 4>,
      'title': None,
      'update_percentage': None,
    }),
    'context': <ANY>,
    'entity_id': 'update.test',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
